[tool.poetry]
name = "propeller-wing-simulator"
version = "0.1.0"
description = "An aerodynamics simulation toolkit focused on evaluating the aerodynamic interference between a propeller and a wing."
authors = ["Casper Kanaar <casper.kanaar.98@gmail.com>"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
scipy = "^1.11.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.6"
mypy = "^1.7.1"
bandit = "^1.7.5"
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"

[tool.ruff]
select = ["E", "F"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []
src = ["."]
exclude = ["venv"]
per-file-ignores = { }
line-length = 88
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
python_version = 3.11
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = "skip"
disallow_untyped_defs = true
disable_error_code = ["override", "attr-defined", "import", "empty-body"]
exclude = ["venv/"]

[tool.bandit]
exclude_dirs = [
    "**/*_test.py",
    "./venv/",
    "./*cache*/",
    "./resources/",
    "./notebooks/"
]
skips = ["B608"]

[tool.pytest.ini_options]
testpaths = ["src"]
python_files = ["test_*.py"]
addopts = "--strict-markers --disable-pytest-warnings"
markers = []

[tool.coverage.paths]
source = ["src", "*/site-packages"]
omit = ["**/__init__.py", "**/test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
